--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 python:
-	- "3.7"
+  - "2.7"
+#Pypy
+  - "pypy"
 install:
-	- pip install beautifulsoup4
-script:
-	- python Series Subtitle Downloader.py
+  - pip install bs4
+script: python Series Subtitle Downloader.py
