--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "3.7"
+  - "3.7.0"
 install:
-  - pip install bs4
+  - pip install beautifulsoup4
 script: python Series Subtitle Downloader.py
