--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
   - "3.7.0"
 install:
   - pip install beautifulsoup4
-script: python Series Subtitle Downloader.py
+script: python Series Subtitle Downloader.py < testing.txt
